k8s/hello_docker/serviceEntry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: hello-external
spec:
  hosts:
  - hello1.external.local      # 定义一个虚拟主机名
  addresses:
  - 172.17.0.2/32             # 本地服务地址
  ports:
  - number: 5000             # 本地服务监听的端口
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL          # 标记为网格外部服务
  resolution: NONE                 # 表示使用静态地址解析
